--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
   </header>
   
   <main>
-    <!-- Hier wird die Spielszene (2D-Top-Down Stadt) dargestellt -->
-    <canvas id="gameCanvas"></canvas>
+    <!-- Canvas für die Ampelsimulation -->
+    <canvas id="gameCanvas" style="border: 1px solid black; width: 100%; height: 400px;"></canvas>
     
     <!-- Konfigurationsmenü für die Ampeln -->
     <div id="controlPanel">
       <h2>Konfigurationsmenü</h2>
-      <!-- Beispielhafte Steuerelemente -->
       <label for="ampelTimer">Ampel-Timer:</label>
       <input type="range" id="ampelTimer" min="5" max="60" value="30">
       <button id="applySettings">Einstellungen anwenden</button>
